tests/ui/unsized/return-unsized-from-trait-method.stderr
error[E0277]: the size for values of type `[u8]` cannot be known at compilation time
  --> $DIR/return-unsized-from-trait-method.rs:9:19
   |
LL |         let _ = f.foo();
   |                   ^^^ doesn't have a size known at compile-time
   |
   = help: the trait `Sized` is not implemented for `[u8]`
   = note: the return type of a function must have a statically known size

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
